# micsen

./: .gitignore  CMakeLists.txt  readme.md
inc/: FreeRTOSConfig.h  config.h  dht.h  ky037.h  packet.h  packet_types.h  spi.h  sta.h  utils.h
src/: dht.c  ky037.c  master.c  packet.c  packet_types.c  slave.c  spi.c  sta.c  utils.c
